--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "bootstrap": "^5.3.3",
+    "lenis": "^1.2.3",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-scroll-trigger": "^0.6.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
