--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "bootstrap": "^5.3.3",
+    "gsap": "^3.12.7",
     "lenis": "^1.2.3",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-scroll-trigger": "^0.6.14",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.5"
   },
   "devDependencies": {
